GDExtension boilerplate and module boilerplate

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,10 @@
 
 # Normalize EOL for all files that Git considers text files
 * text=auto eol=lf
+
+# Only include the compiled addon when downloading from the Asset Library.
+/**                export-ignore
+/addons            !export-ignore
+/addons/**         !export-ignore
+/addons/4d/src     export-ignore
+/addons/4d/src/**  export-ignore
