Fix GDExtension fully
Works in Godot 4.3-stable (godot-cpp requires PR 1558)

--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,17 @@
 # General C++ generated files
 *.a
 *.ax
+*.bc
 *.d
 *.lib
 *.lo
 *.o
 *.os
 *.ox
+*.pdb
 *.Plo
 *.so
+*.tmp
 # Binutils tmp linker output of the form "stXXXXXX" where "X" is alphanumeric
 st[A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9]
 
