--- a/addons/4d/SConstruct
+++ b/addons/4d/SConstruct
@@ -10,6 +10,10 @@ sources = Glob("*.cpp") + Glob("src/*.cpp") + Glob("../../*.cpp") + Glob("../../
 
 env.Append(CPPDEFINES=["GDEXTENSION"])
 
+if env["platform"] == "windows":
+    if env["OBJSUFFIX"].endswith(".obj"):
+        env["OBJSUFFIX"] = env["OBJSUFFIX"][:-4] + ".o.obj"
+
 bin_path = "bin/"
 extension_name = "godot_4d"
 debug_or_release = "release" if env["target"] == "template_release" else "debug"
