--- a/addons/4d/SConstruct
+++ b/addons/4d/SConstruct
@@ -51,11 +51,13 @@ if env["target"] == "editor":
     env.Append(
         CPPPATH=[
             "../../editor",
+            "../../editor/icons",
             "../../editor/off",
             "../../editor/viewport",
         ]
     )
     sources += Glob("../../editor/*.cpp")
+    sources += Glob("../../editor/icons/*.cpp")
     sources += Glob("../../editor/off/*.cpp")
     sources += Glob("../../editor/viewport/*.cpp")
 
@@ -104,3 +106,17 @@ else:
     )
 
 Default(library)
+
+# The rest of this file handles generating the 4D icons header file.
+import importlib.util
+import os
+import sys
+editor_4d_icon_generator_path = os.path.abspath(os.path.join('../../editor/icons/editor_4d_icon_generator.py'))
+spec = importlib.util.spec_from_file_location("editor_4d_icon_generator", editor_4d_icon_generator_path)
+editor_4d_icon_generator = importlib.util.module_from_spec(spec)
+sys.modules["editor_4d_icon_generator"] = editor_4d_icon_generator
+spec.loader.exec_module(editor_4d_icon_generator)
+
+target_file_path = "../../editor/icons/editor_4d_icons.gen.h"
+icon_sources = Glob("icons/4D.svg") + Glob("icons/Node4D.svg")
+editor_4d_icon_generator.make_editor_4d_icons_action([target_file_path], icon_sources, env)
