--- a/addons/4d/SConstruct
+++ b/addons/4d/SConstruct
@@ -120,12 +120,20 @@ Default(library)
 import importlib.util
 import os
 import sys
-editor_4d_icon_generator_path = os.path.abspath(os.path.join('../../editor/icons/editor_4d_icon_generator.py'))
-spec = importlib.util.spec_from_file_location("editor_4d_icon_generator", editor_4d_icon_generator_path)
-editor_4d_icon_generator = importlib.util.module_from_spec(spec)
-sys.modules["editor_4d_icon_generator"] = editor_4d_icon_generator
-spec.loader.exec_module(editor_4d_icon_generator)
+
+header_builders_path = os.path.abspath(os.path.join("src/header_builders.py"))
+spec = importlib.util.spec_from_file_location("header_builders", header_builders_path)
+header_builders = importlib.util.module_from_spec(spec)
+sys.modules["header_builders"] = header_builders
+spec.loader.exec_module(header_builders)
+
+env["BUILDERS"]["GLSL_HEADER"] = (
+    Builder(
+        action=header_builders.build_raw_headers_action,
+        suffix="glsl.gen.h",
+    ),
+)
 
 target_file_path = "../../editor/icons/editor_4d_icons.gen.h"
 icon_sources = Glob("icons/4D.svg") + Glob("icons/Node4D.svg")
-editor_4d_icon_generator.make_editor_4d_icons_action([target_file_path], icon_sources, env)
+header_builders.make_svg_icons_action([target_file_path], icon_sources, env)
