--- a/addons/4d/SConstruct
+++ b/addons/4d/SConstruct
@@ -116,7 +116,7 @@ else:
 
 Default(library)
 
-# The rest of this file handles generating the 4D icons header file.
+# The rest of this file handles generating the 4D icons file and GLSL header files.
 import importlib.util
 import os
 import sys
@@ -127,11 +127,9 @@ header_builders = importlib.util.module_from_spec(spec)
 sys.modules["header_builders"] = header_builders
 spec.loader.exec_module(header_builders)
 
-env["BUILDERS"]["GLSL_HEADER"] = (
-    Builder(
-        action=header_builders.build_raw_headers_action,
-        suffix="glsl.gen.h",
-    ),
+env["BUILDERS"]["GLSL_HEADER"] = Builder(
+    action=header_builders.build_raw_headers_action,
+    suffix="glsl.gen.h",
 )
 
 target_file_path = "../../editor/icons/editor_4d_icons.gen.h"
